--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "http-parser"]
 	path = http-parser
-	url = https://github.com/nodejs/http-parser
+	url = git@github.com:nodejs/http-parser
